[gd_scene load_steps=6 format=3 uid="uid://dwfbpcmubmawx"]

[ext_resource type="Texture2D" uid="uid://83akrwv4lw82" path="res://Scenes/UI/PlayerCustomizationMenu/add.svg" id="1_jqxtk"]
[ext_resource type="PackedScene" uid="uid://8sxwa25paubj" path="res://Scenes/UI/PlayerCustomizationMenu/PlayerSelectionMainItem/player_selection_main_item.tscn" id="1_nf1j6"]
[ext_resource type="Script" uid="uid://3uo5do24xi1v" path="res://Scenes/UI/PlayerCustomizationMenu/player_selection_item.gd" id="1_prdsm"]
[ext_resource type="PackedScene" uid="uid://ch7ktmnnktu7d" path="res://Scenes/UI/PlayerCustomizationMenu/ItemsGridMenu/items_grid_menu.tscn" id="4_6lae3"]
[ext_resource type="PackedScene" uid="uid://b7s8i5b2dk747" path="res://Scenes/UI/PlayerCustomizationMenu/PresetsMenu/presets.tscn" id="5_prdsm"]

[node name="PlayerSelectionItem" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_type_variation = &"StdSecondaryPanel"
script = ExtResource("1_prdsm")

[node name="Panel" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"StdSecondaryPanel"
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="AddPlayer" type="Button" parent="Panel"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
icon = ExtResource("1_jqxtk")
icon_alignment = 1
expand_icon = true

[node name="Main" parent="Panel" instance=ExtResource("1_nf1j6")]
visible = false
layout_mode = 2

[node name="Presets" parent="Panel" instance=ExtResource("5_prdsm")]
visible = false
layout_mode = 2

[node name="PrimaryWeaponsGrid" parent="Panel" instance=ExtResource("4_6lae3")]
visible = false
layout_mode = 2
TITLE = "Primary weapon"

[node name="MovementBonusGrid" parent="Panel" instance=ExtResource("4_6lae3")]
visible = false
layout_mode = 2
TITLE = "Movement bonus"

[node name="PowerupGrid" parent="Panel" instance=ExtResource("4_6lae3")]
visible = false
layout_mode = 2
TITLE = "Powerup"

[connection signal="pressed" from="Panel/AddPlayer" to="." method="_on_add_player_pressed"]
[connection signal="delete_item" from="Panel/Main" to="." method="_on_main_delete_item"]
[connection signal="open_movement_bonus_menu_triggered" from="Panel/Main" to="." method="_on_main_open_movement_bonus_menu_triggered"]
[connection signal="open_powerup_menu_triggered" from="Panel/Main" to="." method="_on_main_open_powerup_menu_triggered"]
[connection signal="open_preset_menu_triggered" from="Panel/Main" to="." method="_on_main_open_preset_menu_triggered"]
[connection signal="open_primary_weapon_menu_triggered" from="Panel/Main" to="." method="_on_main_open_primary_weapon_menu_triggered"]
[connection signal="player_type_changed" from="Panel/Main" to="." method="_on_main_player_type_changed"]
[connection signal="close_triggered" from="Panel/Presets" to="." method="_on_presets_close_triggered"]
[connection signal="preset_selected" from="Panel/Presets" to="." method="_on_presets_preset_selected"]
[connection signal="close_triggered" from="Panel/PrimaryWeaponsGrid" to="." method="_on_primary_weapons_grid_close_triggered"]
[connection signal="item_selected" from="Panel/PrimaryWeaponsGrid" to="." method="_on_primary_weapons_grid_item_selected"]
[connection signal="close_triggered" from="Panel/MovementBonusGrid" to="." method="_on_movement_bonus_grid_close_triggered"]
[connection signal="item_selected" from="Panel/MovementBonusGrid" to="." method="_on_movement_bonus_grid_item_selected"]
[connection signal="close_triggered" from="Panel/PowerupGrid" to="." method="_on_powerup_grid_close_triggered"]
[connection signal="item_selected" from="Panel/PowerupGrid" to="." method="_on_powerup_grid_item_selected"]
